--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ body {
     font-style: normal;
     font-family: "Roboto", sans-serif;
     font-weight: 500px;
+    letter-spacing: 0.02em;
 }
 
 .list {
@@ -47,7 +48,7 @@ body {
     font-family: Raleway;
     font-weight: 800px;
     font-size: 18px;
-    line-height: 1, 33;
+    line-height: 1.33;
     text-decoration: none;
 }
 
@@ -62,7 +63,7 @@ body {
     color: var(--first-color-text);
     text-decoration: none;
     font-size: 16px;
-    line-height: 1, 5;
+    line-height: 1.5;
 }
 
 .site-nav .link:hover,
@@ -77,7 +78,7 @@ body {
     font-style: normal;
     font-weight: 400px;
     font-size: 16px;
-    line-height: 1, 5;
+    line-height: 1.5;
 }
 
 .auth-nav .link:hover,
@@ -91,7 +92,7 @@ body {
     background-color: var(--color-button-normal);
     color: var(--color-button-text);
     font-size: 16px;
-    line-height: 1, 5;
+    line-height: 1.5;
     display: flex;
     align-items: center;
     letter-spacing: 0.04em;
@@ -109,14 +110,14 @@ body {
     background-color: #2E2F42;
     font-weight: 700px;
     font-size: 56px;
-    line-height: 1, 07;
+    line-height: 1.07;
     text-align: center;
     letter-spacing: 0.02em;
 }
 
 .title {
     font-size: 36px;
-    line-height: 1, 11;
+    line-height: 1.11;
         letter-spacing: 0.02em;
     text-transform: capitalize;
 }
@@ -130,7 +131,7 @@ body {
 .text {
     font-weight: 400;
     font-size: 16px;
-    line-height: 1, 5;
+    line-height: 1.5;
     letter-spacing: 0.02em;
     color: #434455;
 }
@@ -139,7 +140,7 @@ body {
     background: var(--bakcground-color-whitetext);
     font-weight: 400;
     font-size: 16px;
-    line-height: 24px;
+    line-height: 1.5;
     letter-spacing: 0.02em;
     color: #E7E9FC;
 }
