--- a/css/style.css
+++ b/css/style.css
@@ -120,7 +120,7 @@ body {
 .title {
     font-size: 36px;
     line-height: 1.11;
-       
+    text-align: center;
     text-transform: capitalize;
 }
 
